--- a/tic.html
+++ b/tic.html
@@ -4,13 +4,13 @@
 <font size="100",style="color:blue";>
 <tr align="center" height="200">
 <td width="300"> 0 </td>
-<td width="300">  </td>
+<td width="300">  x</td>
 <td width="300">  </td>
 </tr>
 <tr align="center" height="200">
 <td width="300">  </td>
 <td width="300"> 0 </td>
-<td width="300">  </td>
+<td width="300">  x</td>
 </tr>
 <tr align="center" height="200">
 <td width="300">  </td>
